feat: display nickname
